ks8/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app1
  labels:
    name: app1
spec:
  containers:
  - name: app1
    image: app1:5
    imagePullPolicy: IfNotPresent 
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
