ks8/ingress-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
spec:
  type: LoadBalancer
  selector:
    app: ingress-nginx
  ports:
  - port: 80
  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  selector:
    matchLabels:
      name: ingress-nginx
  replicas: 1
  template:
    metadata:
      labels:
        name: ingress-nginx
    spec:
      containers:
      - name: ingress-nginx 
        image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.27.1 
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /helthz
            port: 10254
            scheme: HTTP
        args:
        - /nginx-ingress-controller
        - --publish-service=$(POD_NAMESPACE)/nginx-ingress-lb
        - --default-backend-service=$(POD_NAMESPACE)/default-http-backend
