ks8/nginx-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-backend
spec:
  selector:
    app: nginx-backend
  ports:
  - port: 80
    targetPort: 80


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-backend
spec:
  selector:
    matchLabels:
      app: nginx-backend
  template:
    metadata:
      labels:
        app: nginx-backend
    spec:
      containers:
      - name: http-backend
        image: k8s.gcr.io/defaultbackend:1.0
        livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
        ports:
        - containerPort: 8080
