ks8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  selector:
    name: app1
  type: ClusterIP
  ports:
  - port: 7000
    targetPort: 80
