ks8/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
  - host: meusite.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app1 
          servicePort: 7000
